force-app/main/default/objects/EYI_Rate_List__c/EYI_Rate_List__c.object-meta.xml
<CustomObject>
    <label>Rate List</label>
    <nameField>
        <displayFormat>Rate List-{00}</displayFormat>
        <label>Rate List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>