force-app/main/default/objects/EYI_Rate_List__c/fields/EYI_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>