force-app/main/default/objects/EYI_Rate_List__c/fields/EYI_Calculation_Mode__c.field-meta.xml
<CustomField>
    <fullName>EYI_Calculation_Mode__c</fullName>
    <label>Charge on Area Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saleable Area</fullName>
                <default>true</default>
                <label>Saleable Area</label>
            </value>
            <value>
                <fullName>RERA Carpet Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>