force-app/main/default/objects/EYI_Rate_List__c/fields/EYI_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Calculation_Type__c</fullName>
    <label>Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
            <value>
                <fullName>Quantity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>