force-app/main/default/objects/EYI_Rate_List__c/fields/EYI_Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Condition_Type__c</fullName>
    <label>Condition Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Infra Charges</fullName>
            </value>
            <value>
                <fullName>Base Price</fullName>
            </value>
            <value>
                <fullName>Brokerage Additional</fullName>
            </value>
            <value>
                <fullName>Brokerage</fullName>
            </value>
            <value>
                <fullName>Club House</fullName>
            </value>
            <value>
                <fullName>Floor Rise</fullName>
            </value>
            <value>
                <fullName>Land Cost</fullName>
            </value>
            <value>
                <fullName>2 Wheeler Charges</fullName>
            </value>
            <value>
                <fullName>Base Price-Booking</fullName>
            </value>
            <value>
                <fullName>MSEB Charges</fullName>
            </value>
            <value>
                <fullName>STAMP DUTY AND REG - RECOVERABLE</fullName>
            </value>
            <value>
                <fullName>STAMP DUTY NON RECOVERABLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>