force-app/main/default/objects/EYI_Rate_List__c/fields/EYI_Grand_Total_Value_in_Words__c.field-meta.xml
<CustomField>
    <fullName>EYI_Grand_Total_Value_in_Words__c</fullName>
    <label>Amount in Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>