force-app/main/default/objects/EYI_Rate_List__c/fields/EYI_Inventory__c.field-meta.xml
<CustomField>
    <fullName>EYI_Inventory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>EYI_Inventory__c</referenceTo>
    <relationshipLabel>Rate Lists</relationshipLabel>
    <relationshipName>Rate_Lists</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>