force-app/main/default/objects/EYI_Rate_List__c/fields/EYI_is_Sync_SAP__c.field-meta.xml
<CustomField>
    <fullName>EYI_is_Sync_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Sync SAP?</label>
    <type>Checkbox</type>
</CustomField>