force-app/main/default/objects/EYI_Rate_List__c/fields/EYI_Is_updated__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_updated__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field to trigger SAP batch job once field set fields have been updated</description>
    <label>Is updated?</label>
    <type>Checkbox</type>
</CustomField>