force-app/main/default/objects/EYI_Rate_List__c/fields/EYI_Non_Master_Price__c.field-meta.xml
<CustomField>
    <fullName>EYI_Non_Master_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Master Price</label>
    <type>Checkbox</type>
</CustomField>