force-app/main/default/objects/EYI_Rate_List__c/fields/EYI_Pricing_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Pricing_Amount__c</fullName>
    <label>Pricing Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>