force-app/main/default/objects/EYI_Rate_List__c/fields/EYI_Pricing_Percentage__c.field-meta.xml
<CustomField>
    <fullName>EYI_Pricing_Percentage__c</fullName>
    <label>Pricing Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>