force-app/main/default/objects/EYI_Rate_List__c/fields/EYI_Pricing_Quantity__c.field-meta.xml
<CustomField>
    <fullName>EYI_Pricing_Quantity__c</fullName>
    <label>Pricing Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>