force-app/main/default/objects/EYI_Rate_List__c/fields/EYI_Project_Unit__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Unit</label>
    <referenceTo>EYI_Project_Unit__c</referenceTo>
    <relationshipLabel>Rate Lists</relationshipLabel>
    <relationshipName>Rate_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>