force-app/main/default/objects/EYI_Rate_List__c/fields/EYI_Rate__c.field-meta.xml
<CustomField>
    <fullName>EYI_Rate__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>