force-app/main/default/objects/EYI_Rate_List__c/fields/EYI_SAP_Request__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Request__c</fullName>
    <label>SAP Request</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>