force-app/main/default/objects/EYI_Rate_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Condition_Type__c</columns>
    <columns>EYI_Project__c</columns>
    <columns>EYI_Tower__c</columns>
    <columns>EYI_Inventory__c</columns>
    <columns>EYI_Pricing_Quantity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>EYI_is_Sync_SAP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>