force-app/main/default/objects/EYI_Rate_List__c/listViews/newGroup_EYI_Rate_List.listView-meta.xml
<ListView>
    <fullName>newGroup_EYI_Rate_List</fullName>
    <filterScope>Queue</filterScope>
    <label>newGroup</label>
    <queue>newGroup</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>